Fixing some bugs

--- a/ccn_dhcp.config
+++ b/ccn_dhcp.config
@@ -1,3 +1,5 @@
 #prefix gateway(ip address/machine name) port. e.g.,
-!ccnx:/ fallback 9695
-ccnx:/ccnx.org/ master 9695
+!ccnx:/ gateway 9695
+!ccnx:/ second-gateway 9695
+ccnx:/your-instituion.end/ 224.0.23.170 59695
+ccnx:/ master 9695
