--- a/ccn_dhcp_client.conf
+++ b/ccn_dhcp_client.conf
@@ -1,5 +1,4 @@
 #prefix gateway(ip address/machine name) port. e.g.,
 #
 #These faces are only setup on the client if does not recieve a response from the ccn-dhcp server
-!ccnx:/ 224.0.23.170 59695
-!ccnx:/ second-gateway 9695
+!ccnx:/ gateway_unicast_IP 9695
