--- a/ccn_dhcp_server.conf
+++ b/ccn_dhcp_server.conf
@@ -2,5 +2,9 @@
 #
 #the following are the only entries sent to the dhcp clients
 #to add to their prefix entry tables
-ccnx:/your-instituion.end/ 224.0.23.170 59695
-ccnx:/ gateway 9695
+#
+# entries for local site prefixes
+ccnx:/arizona.edu 224.0.23.170 59695
+#
+# default route entry. use multicast here. in the future may change to unicast to the gateway.
+ccnx:/ 224.0.23.170 59695
