Change server_config to have correct prefix

--- a/ccn_dhcp_server.conf
+++ b/ccn_dhcp_server.conf
@@ -4,7 +4,7 @@
 #to add to their prefix entry tables
 #
 # entries for local site prefixes
-ccnx:/arizona.edu 224.0.23.170 59695
+ccnx:/ndn/arizona.edu 224.0.23.170 59695
 #
 # default route entry. use multicast here. in the future may change to unicast to the gateway.
 ccnx:/ 224.0.23.170 59695
